@@ -1395,6 +1395,14 @@ operator|=
 literal|"GZ"
 expr_stmt|;
 break|break;
+case|case
+name|SNAPPY
+case|:
+name|compressionType
+operator|=
+literal|"SNAPPY"
+expr_stmt|;
+break|break;
 default|default:
 name|compressionType
 operator|=
@@ -1456,6 +1464,14 @@ case|:
 name|compressionType
 operator|=
 literal|"GZ"
+expr_stmt|;
+break|break;
+case|case
+name|SNAPPY
+case|:
+name|compressionType
+operator|=
+literal|"SNAPPY"
 expr_stmt|;
 break|break;
 default|default:
