@@ -639,6 +639,87 @@ name|downStream
 return|;
 block|}
 block|}
+block|,
+name|SNAPPY
+argument_list|(
+literal|"snappy"
+argument_list|)
+block|{
+comment|// Use base type to avoid compile-time dependencies.
+specifier|private
+specifier|transient
+name|CompressionCodec
+name|snappyCodec
+decl_stmt|;
+annotation|@
+name|Override
+name|CompressionCodec
+name|getCodec
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+if|if
+condition|(
+name|snappyCodec
+operator|==
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|externalCodec
+init|=
+name|ClassLoader
+operator|.
+name|getSystemClassLoader
+argument_list|()
+operator|.
+name|loadClass
+argument_list|(
+literal|"org.apache.hadoop.io.compress.SnappyCodec"
+argument_list|)
+decl_stmt|;
+name|snappyCodec
+operator|=
+operator|(
+name|CompressionCodec
+operator|)
+name|ReflectionUtils
+operator|.
+name|newInstance
+argument_list|(
+name|externalCodec
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+return|return
+name|snappyCodec
+return|;
+block|}
+block|}
 block|;
 specifier|private
 specifier|final
