@@ -2859,6 +2859,28 @@ name|Compression
 operator|.
 name|Algorithm
 operator|.
+name|SNAPPY
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|numCfs
+operator|--
+operator|>
+literal|0
+condition|)
+block|{
+name|familyToCompression
+operator|.
+name|put
+argument_list|(
+literal|"Family2=asdads&!AASD"
+argument_list|,
+name|Compression
+operator|.
+name|Algorithm
+operator|.
 name|GZ
 argument_list|)
 expr_stmt|;
