@@ -179,6 +179,16 @@ literal|"GZ"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertTrue
+argument_list|(
+name|CompressionTest
+operator|.
+name|testCompression
+argument_list|(
+literal|"SNAPPY"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
