@@ -257,6 +257,8 @@ Release 0.91.0 - Unreleased
    HBASE-3837  Show regions in transition on the master web page (todd)
    HBASE-3839  Add monitoring of currently running tasks to the master and
                RS web UIs
+   HBASE-3691  Add compressor support for 'snappy', google's compressor
+               (Nichole Treadway and Nicholas Telford)
 
 Release 0.90.4 - Unreleased
 
